--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@react-pdf/renderer": "^4.3.2",
     "@reduxjs/toolkit": "^2.11.2",
     "autoprefixer": "^10.4.23",
     "axios": "^1.13.4",
     "html2canvas-pro": "^1.6.6",
+    "html2pdf.js": "^0.14.0",
     "jspdf": "^4.0.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
