--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@react-pdf/renderer": "^4.3.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@reduxjs/toolkit": "^2.11.2",
     "autoprefixer": "^10.4.23",
     "axios": "^1.13.4",
@@ -25,7 +27,10 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
+    "react-sweetalert2": "^0.6.0",
+    "react-type-animation": "^3.2.0",
     "tailwindcss": "^4.1.18",
+    "three": "^0.182.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
