--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
-    "react-sweetalert2": "^0.6.0",
     "react-type-animation": "^3.2.0",
+    "sweetalert2": "^11.26.20",
     "tailwindcss": "^4.1.18",
     "three": "^0.182.0",
     "yup": "^1.7.1"
