fix: use standard vercel routing to resolve MIME type issues

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "rewrites": [
-    {
-      "source": "/((?!assets/|public/|.*\\..*).*)",
-      "destination": "/index.html"
-    }
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
